# law_project

./: .gitignore  AGENTS.md  Makefile  README.md  implementation_plan.md  pyproject.toml  references.bib
configs/: paths.example.yaml  research_params.yaml
data/processed/: README.md
docs/: assumptions_log.md  data_dictionary.md  literature_review.md  results_log.md
paper/: mdvn_panuwat_case_study.md
scripts/: build_linkages.py  build_mna_event_universe.py  build_option_buckets.py  build_underlying_daily.py  freeze_mdvn_case_event.py  ingest_options.py  make_mdvn_outputs.py  package_mdvn_assessment.py  run_mdvn_case_study.py
src/shadow_trading/: __init__.py  abnormal.py  buckets.py  calendars.py  case_study.py  config.py  io.py  linkages.py  options_clean.py  pipelines.py  plots.py  release.py  schema.py  sec_events.py  sec_party.py  underlyings.py
tests/: case_study_fixtures.py  test_abnormal_metrics.py  test_bucketing.py  test_case_study_config.py  test_case_study_outputs.py  test_case_study_requires_calcs.py  test_case_study_runner.py  test_event_alignment.py  test_ingest_pipeline.py  test_linkages.py  test_mdvn_case_event.py  test_mdvn_exact_contracts.py  test_paper_citations.py  test_release_packaging.py  test_schema.py  test_sec_events.py  test_underlying_daily.py
