[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow-trading"
version = "0.1.0"
description = "Reproducible law-and-economics pipeline for shadow trading in U.S. options markets."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "polars>=1.0",
  "PyYAML>=6.0",
  "tzdata>=2026.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
